--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@astrojs/node": "^9.1.3",
     "@astrojs/react": "4.2.2",
     "@astrojs/sitemap": "3.3.0",
+    "@google/generative-ai": "^0.24.1",
     "@radix-ui/react-slot": "^1.1.2",
     "@supabase/supabase-js": "^2.49.4",
     "@tailwindcss/vite": "4.0.17",
@@ -26,13 +27,15 @@
     "lucide-react": "^0.487.0",
     "react": "19.0.0",
     "react-dom": "19.0.0",
-    "tailwind-merge": "^3.1.0",
-    "tailwindcss": "4.0.17",
-    "tw-animate-css": "^1.2.5"
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-dist": "^5.21.0",
+    "tailwind-merge": "^3.2.0",
+    "tailwindcss": "4.0.17"
   },
   "devDependencies": {
     "@eslint/compat": "1.2.7",
     "@eslint/js": "9.23.0",
+    "@types/swagger-jsdoc": "^6.0.4",
     "@typescript-eslint/eslint-plugin": "8.28.0",
     "@typescript-eslint/parser": "8.28.0",
     "eslint": "9.23.0",
@@ -48,6 +51,7 @@
     "husky": "9.1.7",
     "lint-staged": "15.5.0",
     "prettier-plugin-astro": "0.14.1",
+    "tw-animate-css": "^1.2.9",
     "typescript-eslint": "8.28.0"
   },
   "lint-staged": {
