--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "eslint-plugin-react-hooks": "5.2.0",
     "husky": "9.1.7",
     "lint-staged": "15.5.0",
+    "prettier": "^3.5.3",
     "prettier-plugin-astro": "0.14.1",
     "typescript-eslint": "8.28.0"
   },
