--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "react-dom": "19.0.0",
     "tailwind-merge": "^3.1.0",
     "tailwindcss": "4.0.17",
-    "tw-animate-css": "^1.2.5"
+    "tw-animate-css": "^1.2.5",
+    "zod": "^3.25.42"
   },
   "devDependencies": {
     "@eslint/compat": "1.2.7",
