--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "lucide-react": "^0.487.0",
+    "node-fetch": "^2.7.0",
     "react": "19.0.0",
     "react-dom": "19.0.0",
     "tailwind-merge": "^3.1.0",
